--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,7 +146,7 @@ main {
 }
 
 #orderDetalisSection {
-    background-color: white;
+    background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -160,6 +160,18 @@ main {
 #orderStatus {
     font-size: 1.2rem;
     margin-bottom: 20px;
+}
+
+#productSelect{
+    width: 95%;
+    height: 30px;
+    border-radius: 10px;
+    padding: 0 0 0 10px;
+    margin: 10px;
+}
+
+#productSelect:hover{
+    cursor: pointer;
 }
 
 input {
