--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ main {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-#productRegistrationSection, #orderDetalisSection{
+#productRegistrationSection, #orderDetailsSection{
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -175,14 +175,14 @@ main {
     background-color: #c82333;
 }
 
-#orderDetalisSection {
+#orderDetailsSection {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-#orderDetalisSection h2 {
+#orderDetailsSection h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
